Fixed: angle-theme - fix misalignment between menu label and row count when having long label. @7.0-SNAPSHOT

--- a/src/main/resources/resources/angleTheme.css
+++ b/src/main/resources/resources/angleTheme.css
@@ -794,6 +794,7 @@ body#login #page > footer {
 #sidebar li ul>li>a, #sidebar li ul>li>.sidemenu_inner {
     padding: 8px 20px 8px 65px;
     display: block;
+    overflow: auto;
 }
 .rtl #sidebar li ul>li>a, .rtl #sidebar li ul>li>.sidemenu_inner {
     padding: 8px 65px 8px 20px;
@@ -1838,6 +1839,13 @@ body .form-cell .grid thead tr, body .subform-cell .grid thead tr {
 
 .badge{
     border: 1px solid #fffcfc;
+    max-width: 20%;
+}
+
+.menu-container > li > a > span:nth-child(1) {
+    float: left;
+    max-width: 80%;
+    white-space: normal;
 }
 
 body .grid-stack-item .grid-stack-item-content {
